      alternative.

      \item \command{zip.file.extract()} is now defunct: use
      \code{unzip()} or \code{unz()} instead.

      \item \command{R CMD Rd2dvi} without the \option{--pdf} option is
      now deprecated: only PDF output will be supported in future
      releases (since this allows the use of fonts only supported for
      PDF).

      \item Options such as \code{--max-nsize} and the function
      \code{mem.limits()} are now deprecated: these limits are nowadays
      almost never used, and are reported by \code{gc()} when they are
      in use.

      \item Forms like \code{binomial(link = "link")} for GLM families
      deprecated since \R 2.4.0 are now defunct.

      \item The \code{declarativeOnly} argument to
      \code{loadNamespace()} (not relevant since \R 2.13.0) has been
      removed.

      \item Use of \code{library.dynam()} without specifying all the
      first three arguments is deprecated.  (It is often called from a
      namespace, and the defaults are only appropriate to a package.)
      
      Use of \code{chname} in \code{library.dynam()} with the extension
      \file{.so} or \code{.dll} (which is clearly not allowed according
      to the help page) is deprecated.  This also applies to
      \code{library.dynam.unload()} and \code{useDynLib} directives in
      \code{NAMESPACE} files.
    }
  }

  \subsection{INSTALLATION}{
    \itemize{
      \item The base and recommended packages are now byte-compiled
      (equivalent to \command{make bytecode} in \R 2.13.x).

      \item Configure option \option{--with-system-zlib} now only makes
      use of the basic interface of \code{zlib} and not the
      C function \samp{gzseek} which has shown erroneous behaviour in
      \code{zlib} 1.2.4 and 1.2.5.

      \item The \code{zlib} in the R sources is now version 1.2.5.
      (This is safe even on 32-bit Linux systems because only the basic
      interface is now used.)
