@@ -745,7 +745,7 @@
       \item \command{R CMD Rd2dvi} without the \option{--pdf} option is
       now deprecated: only PDF output will be supported in future
       releases (since this allows the use of fonts only supported for
-      PDF).
+      PDF), and only \command{R CMD Rd2pdf} will be available.
 
       \item Options such as \code{--max-nsize} and the function
       \code{mem.limits()} are now deprecated: these limits are nowadays
@@ -877,6 +877,9 @@
 
       \item \code{loess()} is better protected against misuse,
       e.g. zero-length \code{span}.  (\PR{14691})
+
+      \item \code{HoltWinters()} checks that the optimization
+      succeeded. (\PR{14694})
     }
   }
 }
